--- a/02-in-document-styles.html
+++ b/02-in-document-styles.html
@@ -17,12 +17,21 @@
             background-color: rgba(255, 0, 0, 0.4) !important;
             display: inline-block;
         }
+        .yellow-square {
+            background-color: #FF0;
+            height: 100px;
+            color: #AAA;
+            padding: 20px;
+            margin: 2px;
+            font-size: 152px;
+            display: block;
+        }
     </style>
 
 </head>
 
 <body>
-    <div class="red-square">Square #1</div>
+    <div class="yellow-square">Square #1</div>
     <div class="red-square" style="background-color: #F0F;">Square #2</div>
 </body>
 
